--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -763,3 +763,12 @@
  danada_area:0 "Danada"
  hagalua_area:0 "Hagalua"
  
+ bnav_area:0 "Bnav"
+ neqursnebt_area:0 "Nequr'snebt"
+ gujtkbets_area:0 "Gujtkbets"
+ gahartigval_area:0 "Gahar'tigval"
+ erambrei_area:0 "Erambrei"
+ bnamastigval_area:0 "Bnamastigval"
+ breibet_area:0 "Breibet"
+ dmbagbets_area:0 "Dmbagbets"
+ nomabgbets_area:0 "Nomabgbets"
