--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1194,6 +1194,8 @@
  SDH_ADJ:0 "Sur'dmbag Hakli"
  KRT:0 "Kae'rm Taratam"
  KRT_ADJ:0 "Kae'rm Taratami"
+ RMT:0 "Ramtnem"
+ RMT_ADJ:0 "Ramtnemi"
  BKS:0 "Bkuslcuht"
  BKS_ADJ:0 "Bkuslcuhtan"
 
