--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3489,7 +3489,7 @@
  PROV3488:0 "3488"
  PROV3489:0 "Momata"
  PROV3490:0 "3490"
- PROV3491:0 "3491"
+ PROV3491:0 "Fanikutg"
  PROV3492:0 "Budnayig"
  PROV3493:0 "3493"
  PROV3494:0 "Budaug"
@@ -3512,7 +3512,7 @@
  PROV3511:0 "Makahena"
  PROV3512:0 "Strkiha"
  PROV3513:0 "Phadetasa"
- PROV3514:0 "3514"
+ PROV3514:0 "Vqaratrong"
  PROV3515:0 "Jangari"
  PROV3516:0 "Pagakanra"
  PROV3517:0 "Gatauna"
@@ -3573,7 +3573,7 @@
  PROV3572:0 "Muhasa"
  PROV3573:0 "Maravasa"
  PROV3574:0 "Vibyeta"
- PROV3575:0 "3575"
+ PROV3575:0 "Qadahir"
  PROV3576:0 "Maranga"
  PROV3577:0 "Bhara"
  PROV3578:0 "Athavat"
@@ -3672,7 +3672,7 @@
  PROV3671:0 "Daboama"
  PROV3672:0 "Atatama"
  PROV3673:0 "Ragtama"
- PROV3674:0 "3674"
+ PROV3674:0 "Buaman"
  PROV3675:0 "Pakmala"
  PROV3676:0 "Adhikespa"
  PROV3677:0 "3677"
@@ -3725,7 +3725,7 @@
  PROV3724:0 "Akerupi"
  PROV3725:0 "3725"
  PROV3726:0 "Maratam"
- PROV3727:0 "3727"
+ PROV3727:0 "Daraka"
  PROV3728:0 "3728"
  PROV3729:0 "Bhrikta"
  PROV3730:0 "Pradespa"
@@ -3781,7 +3781,7 @@
  PROV3780:0 "Phamesa"
  PROV3781:0 "3781"
  PROV3782:0 "Megadya"
- PROV3783:0 "3783"
+ PROV3783:0 "Fimerasta"
  PROV3784:0 "Bhainagya"
  PROV3785:0 "3785"
  PROV3786:0 "3786"
@@ -3934,29 +3934,29 @@
  PROV3933:0 "3933"
  PROV3934:0 "3934"
  PROV3935:0 "3935"
- PROV3936:0 "3936"
- PROV3937:0 "3937"
- PROV3938:0 "3938"
- PROV3939:0 "3939"
+ PROV3936:0 "Tamjuq"
+ PROV3937:0 "Gelmets"
+ PROV3938:0 "Tuvam'Tawak"
+ PROV3939:0 "Nabebekaw"
  PROV3940:0 "3940"
- PROV3941:0 "3941"
+ PROV3941:0 "Etjatian"
  PROV3942:0 "3942"
  PROV3943:0 "3943"
- PROV3944:0 "3944"
+ PROV3944:0 "Xagjatian"
  PROV3945:0 "3945"
  PROV3946:0 "3946"
  PROV3947:0 "3947"
  PROV3948:0 "3948"
  PROV3949:0 "3949"
  PROV3950:0 "3950"
- PROV3951:0 "3951"
+ PROV3951:0 "Fasmeesg"
  PROV3952:0 "3952"
  PROV3953:0 "3953"
  PROV3954:0 "3954"
  PROV3955:0 "3955"
  PROV3956:0 "3956"
- PROV3957:0 "3957"
- PROV3958:0 "3958"
+ PROV3957:0 "Bephadug"
+ PROV3958:0 "Bakebkun"
  PROV3959:0 "3959"
  PROV3960:0 "3960"
  PROV3961:0 "3961"
