Bkuslcuht Region prov names
Rest of Bkuslcuht region prov names, i think a few provinces could use a revamp in the future.

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3495,10 +3495,10 @@
  PROV3494:0 "Budaug"
  PROV3495:0 "3495"
  PROV3496:0 "Pumgara"
- PROV3497:0 "3497"
+ PROV3497:0 "Acnagvbua"
  PROV3498:0 "Kinvai"
  PROV3499:0 "Sonyochama"
- PROV3500:0 "3500"
+ PROV3500:0 "Kvinbifalg"
  PROV3501:0 "3501"
  PROV3502:0 "Kaykali"
  PROV3503:0 "3503"
@@ -3641,7 +3641,7 @@
  PROV3640:0 "Manogbag"
  PROV3641:0 "Busamgomtan"
  PROV3642:0 "3642"
- PROV3643:0 "3643"
+ PROV3643:0 "Bisinpumg"
  PROV3644:0 "Yondungpa"
  PROV3645:0 "Buskorga"
  PROV3646:0 "3646"
@@ -3711,7 +3711,7 @@
  PROV3710:0 "Agihiya"
  PROV3711:0 "Tughili"
  PROV3712:0 "Kugiual"
- PROV3713:0 "3713"
+ PROV3713:0 "Kasak"
  PROV3714:0 "Muganru"
  PROV3715:0 "Orutakai"
  PROV3716:0 "3716"
@@ -3748,7 +3748,7 @@
  PROV3747:0 "Dipati"
  PROV3748:0 "Sanaspa"
  PROV3749:0 "Vithisi"
- PROV3750:0 "3750"
+ PROV3750:0 "Caektucg"
  PROV3751:0 "Jipsanha"
  PROV3752:0 "3752"
  PROV3753:0 "Vastapsa"
@@ -3771,25 +3771,25 @@
  PROV3770:0 "3770"
  PROV3771:0 "3771"
  PROV3772:0 "Bnihdya"
- PROV3773:0 "3773"
+ PROV3773:0 "Sagfcavt"
  PROV3774:0 "Phandisa"
- PROV3775:0 "3775"
+ PROV3775:0 "Quctunbgt"
  PROV3776:0 "3776"
  PROV3777:0 "Nitimedya"
- PROV3778:0 "3778"
+ PROV3778:0 "Kiriyakay"
  PROV3779:0 "Bolahesa"
  PROV3780:0 "Phamesa"
- PROV3781:0 "3781"
+ PROV3781:0 "Tagesbcus"
  PROV3782:0 "Megadya"
  PROV3783:0 "Fimerasta"
  PROV3784:0 "Bhainagya"
- PROV3785:0 "3785"
- PROV3786:0 "3786"
+ PROV3785:0 "Gknikilagt"
+ PROV3786:0 "Tajranghal"
  PROV3787:0 "Nirdaha"
  PROV3788:0 "3788"
- PROV3789:0 "3789"
+ PROV3789:0 "Menguk"
  PROV3790:0 "Gsambya"
- PROV3791:0 "3791"
+ PROV3791:0 "Bkamebg"
  PROV3792:0 "3792"
  PROV3793:0 "3793"
  PROV3794:0 "Abugrehat"
@@ -3938,23 +3938,23 @@
  PROV3937:0 "Gelmets"
  PROV3938:0 "Tuvam'Tawak"
  PROV3939:0 "Nabebekaw"
- PROV3940:0 "3940"
+ PROV3940:0 "Kahefpabg"
  PROV3941:0 "Etjatian"
  PROV3942:0 "3942"
  PROV3943:0 "3943"
  PROV3944:0 "Xagjatian"
- PROV3945:0 "3945"
- PROV3946:0 "3946"
- PROV3947:0 "3947"
- PROV3948:0 "3948"
- PROV3949:0 "3949"
- PROV3950:0 "3950"
+ PROV3945:0 "Tamenpab"
+ PROV3946:0 "Rakolsacg"
+ PROV3947:0 "Kaejbkteka"
+ PROV3948:0 "Kogbtegut"
+ PROV3949:0 "Lmakengeba"
+ PROV3950:0 "Bgebhieda"
  PROV3951:0 "Fasmeesg"
- PROV3952:0 "3952"
+ PROV3952:0 "Fnagktucit"
  PROV3953:0 "3953"
- PROV3954:0 "3954"
- PROV3955:0 "3955"
- PROV3956:0 "3956"
+ PROV3954:0 "Karvagutb"
+ PROV3955:0 "Bharmeot"
+ PROV3956:0 "Kumnabehl"
  PROV3957:0 "Bephadug"
  PROV3958:0 "Bakebkun"
  PROV3959:0 "3959"
