--- a/localisation/tmm_l_english.yml
+++ b/localisation/tmm_l_english.yml
@@ -89,7 +89,7 @@
  LIBERTY_DESIRE_FROM_RELATIVE_POWER_ALL_SEA:0 "Relative Naval Power of $COUNTED$ to §Y$OVERLORD$§! (§Y$AMT$%§!): $VAL$"
  LIBERTY_DESIRE_FROM_RELATIVE_POWER_ECONOMY:0 "Relative Economic Power to §Y$OVERLORD$§! (§Y$AMT$%§!): $VAL$"
  LIBERTY_DESIRE_FROM_RELATIVE_POWER_ALL_ECONOMY:0 "Relative Economic Power of $COUNTED$ to §Y$OVERLORD$§! (§Y$AMT$%§!): $VAL$"
- SIBERIAN_CONSTRUCTION:0 "constructing a Siberian Frontier"
+ SIBERIAN_CONSTRUCTION:0 "constructing a Colonial Frontier"
  COLONIST_CONSTRUCTION:0 "colonizing"
  SPECIFIC_BUILDING_CONSTRUCTION:1 "constructing a $BUILDING$"
  CANAL_TYPE_NAME:0 "canal"
