--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -52,17 +52,17 @@
  STRELTSY_REGIMENT:1 "Streltsy Regiment\n$EFFECT$"
  streltsy_modifier:0 "Reliance on Streltsy"
  cossacks_modifier:0 "Reliance on Cossacks"
- SIBERIAN_FRONTIER_LACKS_IDEA:0 "Without a national idea, it's impossible to establish a Siberian frontier."
+ SIBERIAN_FRONTIER_LACKS_IDEA:0 "Without a national idea, it's impossible to establish a Colonial frontier."
  CONFIRSIBERIANFRONTIER:0 "Confirm Establish Frontier"
  CONFIRSIBERIANFRONTIER_TEXT:0 "$EFFECT$\nAre you sure?"
- NOT_SIB_TO_BE_SEI:0 "Siberian Frontiers cannot be seized like normal colonies."
+ NOT_SIB_TO_BE_SEI:0 "Colonial Frontiers cannot be seized like normal colonies."
  SIB_FRONTIER_TOOLTIP:0 "This colony gains between $MIN|Y$ and $MAX|Y$ settlers each month."
  SIB_FRONT_TXT:1 "Frontier"
- NOSF_NO_POINTS:0 "You need §Y$COST$§!£dip to establish a Siberian frontier, and you only have §Y$VAL$§!."
- NOSF_HAS_OWNER:1 "You can't establish a new Siberian frontier in a province which is currently being colonized."
- NOSF_ALREADY_COLONISED:0 "It is impossible to establish a Siberian frontier in a province where there is a colonization of some sort in process."
+ NOSF_NO_POINTS:0 "You need §Y$COST$§!£dip to establish a Colonial frontier, and you only have §Y$VAL$§!."
+ NOSF_HAS_OWNER:1 "You can't establish a new Colonial frontier in a province which is currently being colonized."
+ NOSF_ALREADY_COLONISED:0 "It is impossible to establish a Colonial frontier in a province where there is a colonization of some sort in process."
  NOSF_NO_TRACE_HOME:0 "A frontier can only be established next to a city we own that can trace a route back to our capital."
- ESTABLISH_SIBFRO_IRO:0 "Establishing a Siberian Frontier will cost §Y$COST$§!£dip£. This will create a colony that will slowly grow, without the need for a colonist, nor any colonial maintenance."
+ ESTABLISH_SIBFRO_IRO:0 "Establishing a Colonial Frontier will cost §Y$COST$§!£dip£. This will create a colony that will slowly grow, without the need for a colonist, nor any colonial maintenance."
  BASE_HARSH_COST:0 "Base from Rebel Size: $VAL|Y$."
  patriarch_state:1 "Great Shrine of $NAME$"
  CONSECRATE_FOR_PA:1 "You can Sanctify Shrines in a state to get $VAL$ Zheng."
@@ -692,7 +692,7 @@
  appoint_a_grand_admiral:0 "Appoint a Grand Admiral"
  expand_officer_lists:0 "Expand Officer Lists"
  appoint_a_new_prime_minister:0 "Appoint a new Prime Minister"
- establish_new_siberian_frontier:0 "Extend Siberian Frontiers"
+ establish_new_siberian_frontier:0 "Extend Colonial Frontiers"
  the_draft:0 "The Draft"
  emergency_impressment_act:0 "Emergency Impressment Act"
  extend_militarization_of_the_state:0 "Extend Militarization of the State"
