--- a/localisation/TD_01_flavour_bkuslcuht_region_l_english.yml
+++ b/localisation/TD_01_flavour_bkuslcuht_region_l_english.yml
@@ -1,2 +1,37 @@
 ﻿l_english:
  bkuslcuht_fur_modifier:0 "Bkuslcuht Jungle Fur Abundance"
+ kabonen_ideas:0 "Kabonenian Ideas"
+ kabonen_ideas_start:0 "Kabonenian Traditions"
+ kabonen_ideas_bonus:0 "Kabonenian Ambition"
+ kabonen_legacy_of_the_muzbahi:0 "Legacy of the Muzbahi Explorers"
+ kabonen_legacy_of_the_muzbahi_desc:0 "We are descendants of the western people, that valued hard work over anything, so we will work as hard to keep living here."
+ kabonen_lessons_of_the_pirate_conflicts:0 "Lessons of the Pirate Hunting"
+ kabonen_lessons_of_the_pirate_conflicts_desc:0 "Tajmuqi pirates being a menace for our trade lines, so we have to adapt our naval doctrines accordingly. The pirates don't stand a chance against a Galley Warfare on shallow waters!"
+ kabonen_adapting_local_administration:0 "Adapting Locals into Administration"
+ kabonen_adapting_local_administration_desc:0 "Frankrani are the minority in our new homeland, and we can't sustain our administration without applying a coexistence policies. Locals now will be allowed into lower layers of our Administration."
+ kabonen_bkuslcuht_trade_dominance:0 "Bkuslcuht Trade Dominance"
+ kabonen_bkuslcuht_trade_dominance_desc:0 "With our superior naval doctrine, we are the only Bkuslcuht nation that managed to fend off successfully the Matriarchal Pirates, which raised our merchants prestige accordingly, making trade domination of the whole region a possibility."
+ kabonen_adapting_legal_codex:0 "Kabonenian Legal Codex"
+ kabonen_adapting_legal_codex_desc:0 "With continued adaptation of coexistence policies, our homeland had to adapt a Kabonenian Legal Codex, that in theory made every of it's citizen equal in court of law."
+ kabonen_beacon_of_western_ideas:0 "Beacon of Western Ideas"
+ kabonen_beacon_of_western_ideas_desc:0 "After decline of our country after Tarag'nomabgi war, we had to reestablish ties with our western brethren, and after that we learned a lot from them, especially the printing press and the existence of a whole new world."
+ kabonen_modernized_ship_design:0 "Modernized Ship Designs"
+ kabonen_modernized_ship_design_desc:0 "Navy is lifeline of our land, without it, we will cease to exist, crushed by the outside powers. We need to do everything to make sure our ships are best of the best, and to achieve that we will invite forgein ship designers from Taedium."
+ 
+ cak_kecig_group_ideas:0 "Cak Kecig Ideas"
+ cak_kecig_group_ideas_start:0 "Cak Kecig Traditions"
+ cak_kecig_group_ideas_bonus:0 "Cak Kecig Ambition"
+ cak_kecig_in_middle_of_the_trade_routes:0 "Crossroads of Pemenian trade"
+ cak_kecig_in_middle_of_the_trade_routes_desc:0 "These lands are in the crossroads of the Pemenian continent, making it a frequently visited place for merchants, and increasing value of our coffers."
+ cak_kecig_iav_karbium:0 "Iav Karbium"
+ cak_kecig_iav_karbium_desc:0 "Iav Karbium, is local folklore-based work ethic of the Bkuslcuht region. There are many types of Iav Karbium, but all of them have one thing in common, all people are working well."
+ cak_kecig_eastern_ship_design:0 "Bkuslcuhtan Ship Designs"
+ cak_kecig_eastern_ship_design_desc:0 "Bkuslcuht ship design school, with it's roots coming from Samadia, specializes in making a sturdy, durable ships, that can survive many cannon volleys."
+ cak_kecig_religious_frontier:0 "On Religious Frontier"
+ cak_kecig_religious_frontier_desc:0 "Bkuslcuht region is a center of religious conflict between Nallavul, Desjaniti, Cach Moi and Bjateel Animists, and nobody wants to abandon their roots. We need to increase efforts to spread our state's faith!"
+ cak_kecig_enlightened_matriarchate:0 "Cradle of Matriarchates"
+ cak_kecig_enlightened_matriarchate_desc:0 "Our lands are known for being cradle of Matriarchate, and being one of the few regions of the world where it survived until late colonialism."
+ cak_kecig_northern_warfare_methods:0 "Northern Warfare Methods"
+ cak_kecig_northern_warfare_methods_desc:0 "Our warfare methods are falling behind. To Keep up, we need to learn from our northern Pemenian neighbours."
+ cak_kecig_right_of_conquest:0 "Right of Conquest"
+ cak_kecig_right_of_conquest_desc:0 "It is our right to rule all of Bkuslcuht, and we will not allow some forgeiners from the east, west nor north, to conquer our land and enslave our people!"
