Pamkusea MT Remaster

--- a/localisation/TD_03_missions_pamkusean_l_english.yml
+++ b/localisation/TD_03_missions_pamkusean_l_english.yml
@@ -1,42 +1,42 @@
 ﻿l_english:
  Pamkusea_A_Push_to_the_South_title:0 "A Push to the South"
- Pamkusea_A_Push_to_the_South_desc:0 ""
+ Pamkusea_A_Push_to_the_South_desc:0 "We sustained humiliation for far too long. We need to reclaim our homeland in the name of unified Pamkusea."
 
  Pamkusea_Drive_Out_the_Visparayan_title:0 "Drive Out the Visparayan"
- Pamkusea_Drive_Out_the_Visparayan_desc:0 ""
+ Pamkusea_Drive_Out_the_Visparayan_desc:0 "To prevent Visparayan incursions and invasions in the future, we need to push the border east and claim Dashavastan as our own land."
 
  Pamkusea_Footstep_of_Visparaya_title:0 "Footstep of Visparaya"
- Pamkusea_Footstep_of_Visparaya_desc:0 ""
+ Pamkusea_Footstep_of_Visparaya_desc:0 "Varazahan is not a very fertile land, but it not only provides a great access point to eastern markets, but also is a very defensible position."
 
  Pamkusea_Birth_of_an_Empire_reconquista_title:0 "Birth of an Empire"
- Pamkusea_Birth_of_an_Empire_reconquista_desc:0 ""
+ Pamkusea_Birth_of_an_Empire_reconquista_desc:0 "We never had an empire - Pamkusea always was a reward for other empires. Eneratian, Zakarturi and Varazan were great states, but will be overshadowed by a kingdom of our own."
 
  Pamkusea_Masters_of_the_Maqitan_Sea_title:0 "Masters of the Maqitan"
- Pamkusea_Masters_of_the_Maqitan_Sea_desc:0 ""
+ Pamkusea_Masters_of_the_Maqitan_Sea_desc:0 "After many struggles there is not a single nation in the Maqitan Sea that can challenge us."
 
  Pamkusea_Unite_the_Exodus_States_title:0 "Unite the Exodus States"
- Pamkusea_Unite_the_Exodus_States_desc:0 ""
+ Pamkusea_Unite_the_Exodus_States_desc:0 "We cannot survive divided - this has been proved many times throughout our history and is even more true now than ever. We have to force other states into submission for the greater good."
 
  Pamkusea_Conquest_of_Zakarturia_title:0 "Conquest of Zakarturia"
- Pamkusea_Conquest_of_Zakarturia_desc:0 ""
+ Pamkusea_Conquest_of_Zakarturia_desc:0 "Generations of people grow up not remembering the life in our old homeland. Pamkusea is no longer our nation - we must seek to establish our domination in Zakarturia."
 
  Pamkusea_Against_the_Hordes_title:0 "Against the Hordes"
- Pamkusea_Against_the_Hordes_desc:0 ""
+ Pamkusea_Against_the_Hordes_desc:0 "Hordes were one of the many causes of the fall of Zakarturi empire, but with the advancement of firearms they stand no chance against us."
 
  Pamkusea_Pamkusea_Birth_of_an_Empire_exodus_title:0 "Birth of an Empire"
- Pamkusea_Pamkusea_Birth_of_an_Empire_exodus_desc:0 ""
+ Pamkusea_Pamkusea_Birth_of_an_Empire_exodus_desc:0 "We never had an empire - Pamkusea always was a reward for other empires. Eneratian, Zakarturi and Varazan were great states, but will be overshadowed by a kingdom of our own."
 
  Pamkusea_Gate_to_the_Kakigia_title:0 "Gate to the Kakigia"
- Pamkusea_Gate_to_the_Kakigia_desc:0 ""
+ Pamkusea_Gate_to_the_Kakigia_desc:0 "Many merchants travel the fast steppe to quickly and safely reach foreign markets. Their independent ventures can greatly benefit our state."
 
  Pamkusea_An_Exiled_Nation_title:0 "An Exiled Nation"
- Pamkusea_An_Exiled_Nation_desc:0 ""
+ Pamkusea_An_Exiled_Nation_desc:0 "The conquest of Pamkusea was brutal and chaotic. Only some managed to leave for northern colonies and join the exodus states."
 
  Pamkusea_Expand_the_Capital_City_title:0 "Expand the Capital City"
- Pamkusea_Expand_the_Capital_City_desc:0 ""
+ Pamkusea_Expand_the_Capital_City_desc:0 "Our capital holds a collection of many bright minds, eager to support our cause and maintain the great Pamkusean culture."
 
  Pamkusea_Question_of_Faith_title:0 "Question of Faith"
- Pamkusea_Question_of_Faith_desc:0 ""
+ Pamkusea_Question_of_Faith_desc:0 "Our mass exodus made many of our people doubt in the Eneratian faith and began exploring other local and foreign options. We must decide our stance on these heretics."
 
  vague_branching_pamkusea_1_title:0 "Branching Mission"
  vague_branching_pamkusea_1_desc:0 ""
@@ -46,41 +46,42 @@
 
  vague_branching_pamkusea_3_title:0 "Branching Mission"
  vague_branching_pamkusea_3_desc:0 ""
+
  Pamkusea_Coexistence_with_Zakarturi_title:0 "Coexistence with Zakarturi"
- Pamkusea_Coexistence_with_Zakarturi_desc:0 ""
+ Pamkusea_Coexistence_with_Zakarturi_desc:0 "Zakarturi are a proud nation and at first they might not want foreigners in their land. But they will learn to accept us with time."
 
  Pamkusea_Repurpose_the_Mepis_Tadzar_title:0 "Repurpose the Mepis Tadzar"
- Pamkusea_Repurpose_the_Mepis_Tadzar_desc:0 ""
+ Pamkusea_Repurpose_the_Mepis_Tadzar_desc:0 "Mepis Tadzar is an architectural wonder. We have to preserve its beauty at all cost."
 
  Pamkusea_A_Multiethnic_State_Exodus_title:0 "Eparchiakian System"
- Pamkusea_A_Multiethnic_State_Exodus_desc:0 ""
+ Pamkusea_A_Multiethnic_State_Exodus_desc:0 "The proper conscription is a corner stone of a survival in the modern times. We must understand foreign armies in order to find what fits us."
 
  Pamkusea_Coexistence_with_Dashivi_title:0 "Coexistence with Dashavi"
- Pamkusea_Coexistence_with_Dashivi_desc:0 ""
+ Pamkusea_Coexistence_with_Dashivi_desc:0 "Despite them being invaders, it is not their fault they were resettled here by the rulers of Varazahan. We must learn to share this bountiful land together."
 
  Pamkusea_the_Varazan_Folk_title:0 "The Varazan Folk"
- Pamkusea_the_Varazan_Folk_desc:0 ""
+ Pamkusea_the_Varazan_Folk_desc:0 "People of Varazahan recently tried to attain their own sense of national identity separate from Visparaya, but they now need to learn to live in our great Pamkusean Empire."
 
  Pamkusea_A_Multiethnic_State_Reconquista_title:0 "Eparchiakian System"
- Pamkusea_A_Multiethnic_State_Reconquista_desc:0 ""
+ Pamkusea_A_Multiethnic_State_Reconquista_desc:0 "The proper conscription is a corner stone of a survival in the modern times. We must understand foreign armies in order to find what fits us."
 
  Pamkusea_Retake_The_Pamkusea_title:0 "Retake the Pamkusea"
- Pamkusea_Retake_The_Pamkusea_desc:0 ""
+ Pamkusea_Retake_The_Pamkusea_desc:0 "We need to encourage our people to migrate back to Pamkusea and reclaim cities once lost to Dashavi settlers."
 
  Pamkusea_Exile_the_Ahnoyasi_title:0 "Exile the Ahnoyasi"
- Pamkusea_Exile_the_Ahnoyasi_desc:0 ""
+ Pamkusea_Exile_the_Ahnoyasi_desc:0 "To establish our rule over the Fravasumi bay, we must secure the major cities by replacing the local people with our own."
 
  Pamkusea_A_Monoethnic_State_Reconquista_title:0 "Eparchiakian System"
- Pamkusea_A_Monoethnic_State_Reconquista_desc:0 ""
+ Pamkusea_A_Monoethnic_State_Reconquista_desc:0 "The proper conscription is a corner stone of a survival in the modern times. We must understand foreign armies in order to find what fits us."
 
- Pamkusea_Exile_the_Zakarturi_title:0 "Exile the Zakarturi"
- Pamkusea_Exile_the_Zakarturi_desc:0 ""
+ Pamkusea_Exile_the_Zakarturi_title:0 "Assimilate the Zakarturi"
+ Pamkusea_Exile_the_Zakarturi_desc:0 "The Zakarturi fell into their dark age following the collapse of their eternal empire. We must enlighten them about our great culture."
 
  Pamkusea_Convert_the_Steppes_title:0 "Convert the Steppes"
- Pamkusea_Convert_the_Steppes_desc:0 ""
+ Pamkusea_Convert_the_Steppes_desc:0 "The Gisian basin is filled with wild and uncultured nomads, however they are eager to learn. We have to spread our wisdom to these areas."
 
  Pamkusea_A_Monoethnic_State_Exodus_title:0 "Eparchiakian System"
- Pamkusea_A_Monoethnic_State_Exodus_desc:0 ""
+ Pamkusea_A_Monoethnic_State_Exodus_desc:0 "The proper conscription is a corner stone of a survival in the modern times. We must understand foreign armies in order to find what fits us."
  
  TD_Pamkusea_Returning_Home:0 "Returning home"
  TD_Pamkusea_Reestablishment_of_Pamkusean_Administration:0 "Reestablishment of Pamkusean Administration"
@@ -90,7 +91,7 @@
  TD_Pamkusea_Establishment_of_New_Administration:0 "Establishment of New Administration"
  TD_Pamkusea_Resettling_of_the_East:0 "Resettling of the East"
  TD_Pamkusea_The_Gates_of_Kakigia:0 "The Gates of Kakigia"
- TD_Pamkusea_Kakigian_Merchant_Fleet:0 "Kakigian Merchant Fleet"
+ TD_Pamkusea_Kakigian_Merchant_Fleet:0 "Kakigian Merchant Union"
  TD_Pamkusea_Development_of_the_Homeland:0 "Development of the Homeland"
  TD_Pamkusea_National_Favouritism:0 "National Favouritism"
  TD_Pamkusea_Funding_the_Missionaries:0 "Funding the Missionaries"
@@ -107,10 +108,10 @@
  Pamkusea_No_Other_Maqitan_country_stronger_than_us_tooltip:0 "No other country with a capital in a region or an island bordering Maqitan sea has stronger army or navy than us."
  Pamkusea_Maqitan_Strongest_Army_tooltip:0 "If we have the strongest army in the Maqitan sea"
  Pamkusea_Maqitan_Strongest_Navy_tooltip:0 "If we have the strongest navy in the Maqitan sea"
- Pamkusea_Branching_missions_column_5_tt:0 "If we picked Pamkusean Political branch, then we will gain an event to choose ethnic policy branching missions."
+ Pamkusea_Branching_missions_column_5_tt:0 "Gain different branching missions depending on chosen political branch.\n§RPicking non-pamkusean political missions will block the right column permanently.§!"
  Pamkusea_Every_Zakarturi_Gisia_Province_will_gain_10_dev_cost_reduction_tt:0 "Every owned province in Gisia region will get §G-10%§! §YDevelopment cost§! for 50 years"
  Pamkusea_Every_owned_trade_Center_in_trigger_scopes_will_gain_reward_tt:0 "Every owned trade center in required trade nodes will get +25% local trade value modifier permanently"
- Pamkusea_branching_mission_column_5_tooltip:0 "This is Ethnic Policy branch, it will disappear upon completion An Exiled Nation if we didn't picked Pamkusean Political branch"
+ Pamkusea_branching_mission_column_5_tooltip:0 "This is cultural policy branch, it will disappear upon completion of 'An Exiled Nation' if we didn't pick Pamkusean Political branch"
  Pamkusea_Has_Selected_administrative_branch_tooltip:0 "We have completed Rebuild the administration missions and picked a mission branch"
  Pamkusea_repurpose_mepis_tadzar_reward_tooltip:0 "Mepis Tadzar will be upgraded with additional 10 maximum absolutism if we are in anhativaz religion group. If we aren't, then we will be able to use it without maximum absolutism effect."
  unlock_monoethnic_military_reform_tt:0 "Unlock Eparchiakian System 5 Tier Government Reform"
@@ -118,7 +119,7 @@
  mepis_tadzar_allowed_nerfed_use_tt:0 "Can use Mepis Tadzar as Mission Reward."
  Pamkusea_Every_Fravasum_Province_will_gain_15_production_tt:0 "Every owned province in Fravasumi Bay Region will gain §G+15%§! §YLocal Production Efficiency§! for 50 years."
  Pamkusea_Every_Gisia_Province_will_gain_33_manpower_tt:0 "Every owned province in Gisia Region will gain §G+33%§! §YLocal Manpower Modifier§! for 50% years."
- Pamkusea_Dynamic_Reward_depending_on_Ethnic_Branch_tt:0 "We will gain additional reward if we have chosen an Ethnic policy branch."
+ Pamkusea_Dynamic_Reward_depending_on_Ethnic_Branch_tt:0 "We will gain additional reward based on our tolerance towards other cultures."
  Pamkusea_Convert_Varazan_by_Blood_tt:0 "Every owned §YVarazan§! province will be converted to our primary culture, but they will lose §YDevelopment§! and gain §YDevastation§!."
  Pamkusea_Expand_Varazan_Development_tt:0 "Every owned §YVarazan§! province will gain §G+2§! §YDevelopment§! of random category."
  
@@ -133,4 +134,5 @@
  Pamkusea_Repurpose_the_Mepis_Tadzar_tt1:0 "If we are in §YAnhativaz§! religious group"
  Pamkusea_Repurpose_the_Mepis_Tadzar_tt2:0 "If we are NOT in §YAnhativaz§! religious group"
  every_province_meeting_the_criteria_tt_zakarturi_group:0 "Every province of §YZakarturi§! culture group will get:"
- every_province_meeting_the_criteria_tt_dashavi_culture:0 "Every provicne of §YDashavi§! culture will get:"
+ every_province_meeting_the_criteria_tt_dashavi_culture:0 "Every province of §YDashavi§! culture will get:"
+ every_province_meeting_the_criteria_tt_varazan_culture:0 "Every province of §YVarazan§! culture will get:"
