--- a/localisation/TD_01_Flavour_Pamkusea_l_english.yml
+++ b/localisation/TD_01_Flavour_Pamkusea_l_english.yml
@@ -25,7 +25,7 @@
  pamkusea.5.desc:0 " "
  pamkusea.5.a:0 "Fund the missionaries, we will convert these dissenters!"
  pamkusea.5.b:0 "Allow the religious freedom, for now.."
- pamkusea.5_tt:0 "We will be able to choose between Missionary Strength or No penalties associated with negative religious tolerance for 25 years."
+ pamkusea.5_tt:0 "We will be able to choose between Missionary Strength or No penalties associated with negative religious tolerance."
  pamkusea.6.t:0 "Ethnic Future of our Pamkusean Realm"
  pamkusea.6.desc:0 " "
  pamkusea.6.a:0 "All cultures are welcome! (Multiethnic Path)"
