Bkuslcuht formable Ideas and other flavour
packaged with unify_bkuslucht.txt to test it.

--- a/localisation/TD_01_flavour_bkuslcuht_region_l_english.yml
+++ b/localisation/TD_01_flavour_bkuslcuht_region_l_english.yml
@@ -35,3 +35,21 @@
  cak_kecig_northern_warfare_methods_desc:0 "Our warfare methods are falling behind. To Keep up, we need to learn from our northern Pemenian neighbours."
  cak_kecig_right_of_conquest:0 "Right of Conquest"
  cak_kecig_right_of_conquest_desc:0 "It is our right to rule all of Bkuslcuht, and we will not allow some forgeiners from the east, west nor north, to conquer our land and enslave our people!"
+ 
+ bkuslcuht_ideas:0 "Bkusluchtan Ideas"
+ bkuslcuht_ideas_start:0 "Bkuslcuhtan Traditions"
+ bkuslcuht_ideas_bonus:0 "Bkuslcuhtan Ambition"
+ bkuslcuht_cugikesck_infantry:0 "Cugikesck Infantry"
+ bkuslcuht_cugikesck_infantry_desc:0 "Cugikesck is a specialized Bkuslcuhtan infantry, that uses unique tactics of cornering their foes to defeat them more easly."
+ bkuslcuht_legacy_of_bkuslcuhtan_unification:0 "Legacy of Bkuslcuhtan Unification"
+ bkuslcuht_legacy_of_bkuslcuhtan_unification_desc:0 "With Bkuslcuht being divided for so long, it's Unification is still fresh in the memory of it's citizens, and commands respect in the heart of it's foes."
+ bkuslcuht_expansion_of_cannon_foundries:0 "Expansion of Cannon Foundries"
+ bkuslcuht_expansion_of_cannon_foundries_desc:0 "After gunpowder made it to the Bkuslcuht region, it was swiftly adapted by the local matriarchates, and many foundries were founded in that period, making gunpowder cheap in the region."
+ bkuslcuht_iav_karbium:0 "Iav Karbium"
+ bkuslcuht_iav_karbium_desc:0 "Iav Karbium, is local folklore-based work ethic of the Bkuslcuht region. There are many types of Iav Karbium, but all of them have one thing in common, all people are working well."
+ bkuslcuht_fuifanikutg_naval_academy:0 "Fuifanikutg Naval Academy"
+ bkuslcuht_fuifanikutg_naval_academy_desc:0 "After founding Fuifanikutg, our Queen issued that one of the first buildings in that city would be a brand new naval academy to train our naval officers."
+ bkuslcuht_end_of_religious_frontier:0 "End of Religious Frontier"
+ bkuslcuht_end_of_religious_frontier_desc:0 "With Unification of Bkuslcuht, most of our country is converted to one, true faith, but we must double our efforts to bring said faith to the farthest corners of our country."
+ bkuslcuht_matriarchal_authority:0 "Matriarchal Authority"
+ bkuslcuht_matriarchal_authority_desc:0 "With dawn of absolutism, our Queen is treated with highest authority, has last say in all of the Bkuslcuhtan matters, and is beloved by all of her subjects."
