--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -47,7 +47,7 @@
  felder_zbojaner_roots_desc:0 "These territories were originally settled by Zbojaner people and many of our own still have bogilish ancestors. Their folklore and religion is still seen in architecture and art and sometimes even claiming Zbojaner ancestry is seen as prestigious."
  felder_forest_infantry:0 "Forest Infantry"
  felder_forest_infantry_desc:0 "Many peasants have experience in traversing and living in the forest, so they will make a great warriors in our army - every leader wishes for a soldier that can feed himself."
- felder_standing_army:0 "A standing army"
+ felder_standing_army:0 "A Standing Army"
  felder_standing_army_desc:0 "While expensive in these times, the high prosperity of these lands have allowed us to adopt standing armies earlier than in other parts of the Empire."
  felder_royal_munition_manufactories:0 "Royal Munition Manufactories"
  felder_royal_munition_manufactories_desc:0 "Closeness to the imperial capital and regional copper deposits swayed the emperor into investing in local artillery and gun production."
