--- a/localisation/TD_01_flavour_wasichantlia_l_english.yml
+++ b/localisation/TD_01_flavour_wasichantlia_l_english.yml
@@ -15,3 +15,21 @@
  star_kingdom_reform_desc:0 "People of Nalanaq believe that the nightly sky holds all of the world truths and they seek to learn them."
  land_of_the_sun_reform:0 "Land of the Sun"
  land_of_the_sun_reform_desc:0 "Stable system of Tonatitlan was only achieved thanks to widespread autonomy - and threat of being sacrificed to the Itonatilu gods..."
+
+ xamaneh_ideas:0 "Xamaneh Ideas"
+ xamaneh_ideas_bonus:0 "Xamaneh Ambition"
+ xamaneh_ideas_start:0 "Xamaneh Traditions"
+ xamaneh_xamaneh_woodworking:0 "Xamaneh Woodworking"
+ xamaneh_xamaneh_woodworking_desc:0 "Our land is famous for our forests and our intricate patterns we carve out of wood. They tell stories of our past and present and decorate many of our palaces and ships."
+ xamaneh_chankabach:0 "Chankabach"
+ xamaneh_chankabach_desc:0 "The trade with the Nalanaq happens mostly through Chalukan middlemen, but thanks to our influence over the Lummak courts we managed to streamline the flow of goods from the south."
+ xamaneh_imperial_relations:0 "Imperial Relations"
+ xamaneh_imperial_relations_desc:0 "When the Tonatitlan rose to power, we knew it is not worth fighting them and instead we embraced them as our allies. The court quickly embraced their faith, but we never abandoned our roots."
+ xamaneh_surprise_tactics:0 "Surprise Tactics"
+ xamaneh_surprise_tactics_desc:0 "Despite our relatively small army, we still manage to scare off potential invaders due to our advantage of Xamaneyollan forest which grants us a massive tactical advantage over our enemies."
+ xamaneh_instant_resupply:0 "Instant Resupply"
+ xamaneh_instant_resupply_desc:0 "Our naval domination in the Atlaqotlatl Bay was made thanks to many naval innovations, but most importantly thanks to our small and mobile boats with low cargo storage, but supported by even smaller ships made specifically for resupplying."
+ xamaneh_rulers_of_atlaqotlatl:0 "Rulers of Atlaqotlatl"
+ xamaneh_rulers_of_atlaqotlatl_desc:0 "When People of Tonatitlan see a ship, they are sure that it is one of our own. We have an undisputed monopoly over any trade in this region and not even the Taedians will be able to break it."
+ xamaneh_memories_of_easterners:0 "Memories of the Easterners"
+ xamaneh_memories_of_easterners_desc:0 "Long time ago a large group of weird men came to our land, sailing on strange ships, speaking foreign language and wearing peculiar clothes. After some time it became apparent that they were the gods of death who brought with them weapons and diseases."
