ehren idea rework + loc and pamkusea minor loc

--- a/localisation/TD_01_Flavour_Pamkusea_l_english.yml
+++ b/localisation/TD_01_Flavour_Pamkusea_l_english.yml
@@ -49,9 +49,12 @@
  pamapoikia_new_destiny:0 "New Destiny"
  pamapoikia_new_destiny_desc:0 "Many people accepted our new reality. Dreams of returning to Pamkusea are long gone as people settle more and more in Zakarturia and see themselves as native Pamapoikians.We now have to wear this name with pride, because it's the only thing we have left."
 
+ #### Ideas
+ 
  pamkusea_ideas:0 "Pamkusean Ideas"
  pamkusea_ideas_bonus:0 "Pamkusean Ambition"
  pamkusea_ideas_start:0 "Pamkusean Traditions"
+
  pamkusea_and_were_back:0 "And We're Back"
  pamkusea_and_were_back_desc:0 "It's been a few hundred years, but that's only a blink in the long history of Pamkusea. We are back to our true homeland. We will defend it to the last drop of peasants' blood."
  pamkusea_new_age_innovations:0 "New Age of Innovations"
@@ -66,3 +69,22 @@
  pamkusea_visparayan_influence_desc:0 "Despite the short time the Dashavi people lived in Pamkusea, influence of their culture on ours is immense. They are potrayed as brutal invaders, but some see them as just as enlightened as us. People take inspiration from discipline of their troops and wisdom of thei rulers."
  pamkusea_protect_the_homeland:0 "Protect the Homeland"
  pamkusea_protect_the_homeland_desc:0 "We made a promise - we will never lose our homeland. Borders remain fortified and new military recruitment system allows for quick mobilisation in case of war. Military academies get more funding than other universities and weapons made by our gunsmiths are not only used by our well-trained soldiers but also sold abroad for profit."
+
+ group_pamkusean_ideas:0 "Pamkusean Minor Ideas"
+ group_pamkusean_ideas_bonus:0 "Pamkusean Minor Ambition"
+ group_pamkusean_ideas_start:0 "Pamkusean Minor Traditions"
+
+ pamkusean_new_home:0 "New Home"
+ pamkusean_new_home_desc:0 "When our homeland fell we needed to find a new place for our people, but these lands were very different from our homes. We started to cultivate our culture and religion to make it more familiar."
+ pamkusean_society_of_thinkers:0 "Society of Thinkers"
+ pamkusean_society_of_thinkers_desc:0 "As a nation that was subjugated by Taedian Eneratian Empire and Kakigian Zakarturi Empire we got to see philosophies of both societies. Now our thinkers are versatile in different schools of thoughts."
+ pamkusean_cannon_military:0 "Cannon Military"
+ pamkusean_cannon_military_desc:0 "Thunderous sound and rain of round shots from our bombards make even the bravest soldiers and generals scared of our military might. We will invest into them more so no one can't conquer as again."
+ pamkusean_solidify_control:0 "Solidify Control"
+ pamkusean_solidify_control_desc:0 "Because we needed to create our states from scratch we discovered new ways to govern these lands. It allows us to have greater control of our lands."
+ pamkusean_taedian_border:0 "Taedian Border"
+ pamkusean_taedian_border_desc:0 "Settling here means that we now control important land trade routes from Taedium to Kakigia. We can use that to benefit us."
+ pamkusean_eternal_march:0 "Eternal March"
+ pamkusean_eternal_march_desc:0 "We were recruited to fight in far lands of Zakarturi Empire and Eneratian Empire. When these empires collapsed many people had hopes that we will be able to enjoy our lives in peace, but after Visparayan invasion we are still far from our homelands, forced to march until we do our duty."
+ pamkusean_national_liberation:0 "National Liberation"
+ pamkusean_national_liberation_desc:0 "The time is now. We can't eternally lament our history, the fate demands us to finally decide what we should do. But until it doesn't happen, we will be ready."
