--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -1,5 +1,26 @@
 ﻿l_english:
 
+ #### Ideas
+
+ ehrenstaat_ideas:0 "Ehren Ideas"
+ ehrenstaat_ideas_bonus:0 "Ehren Ambition"
+ ehrenstaat_ideas_start:0 "Ehren Traditions"
+
+ ehrenstaat_confederated_shipyards:0 "Confederated Shipyards"
+ ehrenstaat_confederated_shipyards_desc:0 "Our shipyards are united in one organisation that is coordinating their work in our entire sphere. It is detached from Ehren poltics and bureaucracy allowing it to work with full potential."
+ ehrenstaat_centre_of_the_north:0 "Centre of the North"
+ ehrenstaat_centre_of_the_north_desc:0 "Control over the straits and creation of our trade league allowed us to divert trade from the entire taedian continent straight into our lands."
+ ehrenstaat_league_of_manufacturers:0 "League of Manufacturers"
+ ehrenstaat_league_of_manufacturers_desc:0 "Manufacturers and traders in Ehrenstaat are cooperating allowing us to optimise and supply production in our sphere. There are always resources ready to fuel Ehren economy."
+ ehrenstaat_republikanische_garde:0 "Republikanische Garde"
+ ehrenstaat_republikanische_garde_desc:0 "Republican Guard of Ehrenstaat is a military organisation with goal of maintaining republican traditions in our state. Their absolute loyalty to Ehren values helps us maintain our system."
+ ehrenstaat_straightforward_bureaucracy:0 "Straightforward Bureaucracy"
+ ehrenstaat_straightforward_bureaucracy_desc:0 "Problem with bureaucracy is that it can get pretty convoluted if not maintained carefully. By keeping all processes simple we can divert less number of people and resources to keep that in check thus allowing us to invest those in more important places."
+ ehrenstaat_maritime_forces:0 "Maritime Forces"
+ ehrenstaat_maritime_forces_desc:0 "Because of our maritime traditions and need for troops that can maintain our influence in different places we needed to establish a force that would be specialised in fast deployment by sea."
+ ehrenstaat_modern_officer_corps:0 "Modern Officer Corps"
+ ehrenstaat_modern_officer_corps_desc:0 "We can't just throw men at enemies and expect it to work, our men need an idea where and how they should attack. Organising our officers allows us to create an experienced cadre that will win our wars."
+
  #### Ehrenstaat start
 
  ## Government
